7월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -648,7 +648,7 @@ amcivwar.208.t:0 "미합중국의 요청"
 amcivwar.208.d:0 "캐나다인들이 거부하다!"
 amcivwar.208.a:0 "이 사소한 일은 그냥 지나칠 것이다"
 amcivwar.208.b:0 "이 오만함으로 인해 무기를 마주치게 될 것이다!"
-amcivwar.209.t:0 "워싱턴이 점령되었다. 이제 수도는 덴버다"
+amcivwar.209.t:0 "워싱턴이 점령되었습니다."
 amcivwar.209.d:0 "워싱턴이 우리 적들에게 함락되었습니다. 우리는 덴버로 수도를 옮겼습니다."
 amcivwar.209.a:0 "산장"
 amcivwar.210.t:0 "내전의 종식"
@@ -785,18 +785,18 @@ amcivwar.255.d:0 "내전이 우리의 개입으로 인해 종식되었습니다.
 amcivwar.255.a:0 "미합중국을 다시 만들자!"
 amcivwar.255.b:0 "군대 점령을 지속하자!"
 amcivwar.256.t:0 "캐나다가 동맹을 요구하다"
-amcivwar.256.d:0 "제2차 미국 내전이 끝나면서 캐나다는 많은 중요한 산업 도심지들을 통제하고 있습니다. 그들은 생디칼리즘에 대항해 개입함으로써 그곳들을 점령했습니다. 이제 그들은 우리가 그들의 동맹에 가입한다면 캐나다 육군이 점령한 지역들이 미합중국의 정당한 정부에게 반환될 수 있다고 말했습니다."
+amcivwar.256.d:0 "제2차 미국 내전이 끝나면서 캐나다는 많은 중요한 산업 도심지들을 통제하고 있습니다. 그들은 생디칼리즘에 대항해 개입함으로써 그곳들을 점령했습니다. 이제 그들은 우리가 그들의 동맹에 가입한다면 캐나다 육군이 점령한 지역들이 [Root.GetNameDef]의 정당한 정부에게 반환될 수 있다고 말했습니다."
 amcivwar.256.a:0 "그들의 제안을 받아들이자"
 amcivwar.256.b:0 "거부한다!"
-amcivwar.257.t:0 "미합중국이 우리의 제안을 받아들이다"
+amcivwar.257.t:0 "[From.GetNameDefCap](이)가 우리의 제안을 받아들이다"
 amcivwar.257.d:0 "미합중국의 정당한 정부는 우리의 제안을 받아들였고 이제 그들은 협상국의 일원입니다."
 amcivwar.257.a:0 "완벽하군"
 amcivwar.258.t:0 "알래스카 반환"
-amcivwar.258.d:0 "내전은 끝났고 캐나다는 알래스카를 정당한 소유자인 미합중국에게 반환해야 합니다."
+amcivwar.258.d:0 "내전은 끝났고 캐나다는 알래스카를 정당한 소유자인 [return_to.GetNameDef]에게 반환해야 합니다."
 amcivwar.258.a:0 "영토는 반환되었다."
 amcivwar.258.b:0 "그곳은 이제 우리의 것이다."
 amcivwar.259.t:0 "뉴잉글랜드 반환"
-amcivwar.259.d:0 "내전은 끝났고 캐나다는 뉴잉글랜드를 미합중국에게 반환해야 합니다."
+amcivwar.259.d:0 "내전은 끝났고 캐나다는 뉴잉글랜드를 [return_to.GetNameDef]에게 반환해야 합니다."
 amcivwar.259.a:0 "영토는 반환되었다."
 amcivwar.259.b:0 "그곳은 이제 우리의 것이다."
 amcivwar.260.t:0 "태평양 합중국이 연합군에게 영토를 반환하다"
@@ -1247,3 +1247,16 @@ amcivwar.605.a:0 "원래 그랬어야 했다."
 amcivwar.605.b:0 "적어도 좋은 소식이긴 하군."
 amcivwar.605.c:0 "마땅히 무너질 만 했다"
 amcivwar.605.e:0 "흥미롭군"
+amcivwar.607.t:0 "We are Cut Off"
+amcivwar.607.d:0 "Our corridor to the western United States has been cut off, and forces are advancing on Washington. We could attempt to hold out here, but chances are our forces out west would evaporate and we run the risk of our leaders being taken here in the city. Advisors have suggested evacuating to Denver, while we still can."
+amcivwar.607.a:0 "Move the capital to Denver at once"
+amcivwar.607.b:0 "No - we hold out here, come what may"
+amcivwar.610.t:0 "Remaining American Territory"
+amcivwar.610.d:0 "Now that we've concluded our territory exchange with [CAL.GetNameDef], there are still territories in the east we could potentially turn over to our allies in [NEE.GetNameDef]."
+amcivwar.610.a:0 "Yes, let's do that"
+amcivwar.610.b:0 "No, they don't need more free land"
+amcivwar.611.t:0 "The Canadian Intervention"
+amcivwar.611.d:0 "It appears [CAN.GetNameDef] has decided to put its finger on the scales of the civil war, likely meaning they intend to impose their own values on the American people if not rule over America directly. Many within our government are outraged, but what can be done about it?"
+amcivwar.611.a:0 "We must resist them, no matter what"
+amcivwar.611.b:0 "We are in no condition to fight them"
+
