7월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Centroamerica_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Centroamerica_l_english.yml
@@ -49,11 +49,6 @@ GUA_totalist_party_long:0 "Partido Vanguardia Popular"
 GUA_national_populist_party:0 "PSq"
 GUA_national_populist_party_long:0 "Partido Sinarquista"
 
-### Leader Descriptions ###
-POLITICS_AUGUSTO_CESAR_SANDINO_DESC:0 "Augusto César Sandino has become more myth than man in Centroamérica. As the former leader of the Centroamérican revolution, he is seen as the father of the nation, a socialist messiah come to liberate the masses from the shackles of foreign occupiers and domestic strongmen alike."
-POLITICS_JACOBO_GUZMAN_ARBENZ_DESC:0 "Jacobo Guzman Árbenz is, by Centroamérican standards, a political moderate. He espouses beliefs not too dissimilar from those of European Social Democrats. Until his party's triumph in the last Centroamérican Socialist Congressional Union, man believed he would be purged as a traitor to the revolution like so many others in Centroamérica."
-POLITICS_FARABUNDO_MARTI_DESC:0 "Farabundo Martí is the Syndicalist former leader of then semi-autonomous El Salvador. He seeks to transform Centroamérica into a bastion of Communard style syndicalism. With syndicalist success at the Socialist Congressional Union, his dream may yet come to fruition."
-
 ### Tooltips ###
 GUA_VOL:0 "Volunteers from Mexico and Central America come to fight in the coming Liberacion"
 GUA_CAN_Not_Watching:0 "The Entente and Internationale are at war"
@@ -69,7 +64,7 @@ GUA_MAY:0 "Congress decided on internal affairs matters"
 GUA_PR_MAY:0 "Sided with Partido Revolucionario on the Mayan question"
 GUA_PS_MAY:0 "Sided with Partido Sindical on the Mayan question"
 GUA_PN_MAY:0 "Sided with Partido Nacional on the Mayan question"
-PNM_Syndie:0 "Syndicalism spreads to Panama!"
+PAN_Syndie:0 "Syndicalism spreads to Panama!"
 GUA_ARM:0 "Congress decided on military policy"
 GUA_PR_ARM:0 "Sided with Partido Revolucionario on the army"
 GUA_PS_ARM:0 "Sided with Partido Sindical on the army"
