--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -1,18 +1,18 @@
 ﻿l_english: 
-annexation_SWITZ_CONQ:0 "The Annexation of Switzerland"
-annexation_SWITZ_CONQ_desc:0 "After fierce fighting in the Alpine Mountains, we have conquered and annexed Switzerland. The Swiss army has surrendered, and the territory is under our control, but the people are still resistant."
-annexation_BUL_CONQ:0 "The Annexation of Bulgaria"
-annexation_BUL_CONQ_desc:0 "After a long fight with the Bulgarian Empire, we have launched a full offensive and forced the Bulgarian Army to surrender. Sofia is now in our hands!"
-annexation_ROM_CONQ:0 "The Annexation of Romania"
-annexation_ROM_CONQ_desc:0 "The Iron Guard regime has been extinguished and their crimes against humanity are finally stopped. We no longer have to worry about them."
-annexation_SER_CONQ:0 "The Annexation of Serbia"
-annexation_SER_CONQ_desc:0 "The Serbian State has been annexed, our troops are parading in Belgrade. A major threat to the stability in the region has been removed."
-annexation_GRE_CONQ:0 "The Annexation of Greece"
-annexation_GRE_CONQ_desc:0 "The Greek Peninsula has been secured and Greece has been annexed. Fate of the entire Greek nation lies in our hands..."
-annexation_HUN_CONQ:0 "The Annexation of Hungary"
-annexation_HUN_CONQ_desc:0 "Hungary has been annexed. Our forces are policing the streets of Budapest and partisans are being detained all across the countryside."
-annexation_AUS_CONQ:0 "The Annexation of Austria"
-annexation_AUS_CONQ_desc:0 "Austria has been annexed and our troops are patrolling the streets of Vienna to prevent a rebellion or anything that could cause further instability."
+annexation_SWITZ_CONQ:0 "스위스의 합병"
+annexation_SWITZ_CONQ_desc:0 "알프스 산맥에서의 격렬한 전투 후에, 우리는 스위스를 정복하고 합병했습니다. 스위스군은 항복했고, 스위스 전역이 우리의 통제 하에 있지만, 스위스 국민들은 여전히 저항하고 있습니다."
+annexation_BUL_CONQ:0 "불가리아의 합병"
+annexation_BUL_CONQ_desc:0 "불가리아 제국과의 오랜 싸움 끝에, 우리의 전면적인 공세에 불가리아 군대는 항복할 수밖에 없었습니다. 소피아는 이제 우리 손 안에 있습니다!"
+annexation_ROM_CONQ:0 "루마니아의 합병"
+annexation_ROM_CONQ_desc:0 "철위대 정권은 붕괴되었고, 그들의 반인륜적 범죄 역시 마침내 종지부를 찍었습니다. 우리는 더 이상 그들에 대해 걱정할 필요가 없습니다."
+annexation_SER_CONQ:0 "세르비아의 합병"
+annexation_SER_CONQ_desc:0 "세르비아는 합병되었고, 우리 군대는 베오그라드에서 행진하고 있습니다. 발칸 반도의 안정에 대한 중대한 위협이 제거되었습니다."
+annexation_GRE_CONQ:0 "그리스의 합병"
+annexation_GRE_CONQ_desc:0 "우리는 그리스 반도를 확보했고 그리스는 합병되었습니다. 그리스 전체의 운명은 우리 손에 달려 있습니다..."
+annexation_HUN_CONQ:0 "헝가리의 합병"
+annexation_HUN_CONQ_desc:0 "헝가리는 합병되었습니다. 우리 군대는 부다페스트의 거리를 순찰하고 있고 파르티잔들은 시골 구석에 처박혀 있습니다."
+annexation_AUS_CONQ:0 "오스트리아의 합병"
+annexation_AUS_CONQ_desc:0 "오스트리아는 합병되었고, 우리 군대는 더 이상의 불안정을 야기할 수 있는 반란이나 또 다른 소요를 예방하기 위해 비엔나 거리를 순찰하고 있습니다."
 annexation_AUS_ITA_CONQ:0 "The Annexation of Austrian Italy"
 annexation_AUS_ITA_CONQ_desc:0 "We have taken control of the Austrian-occupied parts of Italy and we need to decide what do we do with it..."
 annexation_CRO_CONQ:0 "The Annexation of Croatia"
