--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -91,6 +91,15 @@ zbrojovka_brno:0 "브르노 조병창"
 spolchemie:0 "스폴츠헤미에"
 tesla_company:0 "테슬라"
 
+### Bolivia ###
+EAA:0 "Escuela de Aplicación de Armas"
+EMA:0 "Escuela Militar de Aviación"
+EMN:0 "Escuela de Mecánica y de Navegación"
+SAG:0 "Supremo Academia de Guerra"
+SOBOCE:0 "SOBOCE"
+UMSA:0 "Universidad Mayor de San Andres"
+FCAB:0 "Ferrocarril Antofagosta"
+
 ### Bosnia ###
 aluminij:0 "Aluminij"
 univerzitet_u_sarajevu:0 "Univerzitet u Sarajevu"
@@ -221,7 +230,7 @@ GEA_Opel:0 "Opel Südostasien"
 GEA_FMSR:0 "Malaiische Staatseisenbahn"
 GEA_Chemin_de_fer_Transindochinois:0 "Trans-Indochinesische Eisenbahn"
 GEA_Schantung_Eisenbahn_Gesellschaft:0 "Schantung-Eisenbahn-Gesellschaft"
-GEA_Focke-Wulf:0 "Focke-Wulf Ostasien"
+GEA_Focke-Wulf:0 "Focke Wulf Ostasien"
 GEA_Malaiisch_Fluggesellschaft:0 "Malaiische Luftfahrtsgesellschaft"
 GEA_Rumpler_Flugzeugwerke_Ostasien:0 "Rumpler Flugzeugwerke Ostasien"
 GEA_Norddeutscher_Lloyd:0 "Norddeutscher Lloyd Singapur"
@@ -260,11 +269,11 @@ alexandria_shipyard:0 "Alexandria Shipyard"
 sudan_airways:0 "Sudan Airways"
 egypt_air:0 "EgyptAir"
 egyptian_engineering:0 "Egyptian Engineering Agencies"
-krupp_egypt:0 "Krupp Egypt"
-opel_egypt:0 "Opel Egypt"
-daimler_benz_egypt:0 "Daimler-Benz Egypt"
-walther_egypt:0 "Walther"
-mauser_egypt:0 "Mauser"
+krupp_egypt:0 "Krupp Ägypten"
+opel_egypt:0 "Opel El Sakkakini"
+daimler_benz_egypt:0 "Daimler-Benz Ägypten"
+walther_egypt:0 "Walther Ägypten"
+mauser_egypt:0 "Mauser Ägypten"
 shoubra_engineering:0 "Shoubra Engineering"
 
 ### Ethiopia ###
@@ -276,13 +285,25 @@ ethiopia_railway_company:0 "Imperial Railway Company of Ethiopia"
 addis_ababa_aircraft:0 "Addis Ababa Aircraft Workshop"
 massawa_naval_yard:0 "Massawa Naval Yard"
 
+### FOP ###
+somisa_FOP:0 "SOMISA"
+universidad_buenos_aires_FOP:0 "Universidad de Buenos Aires"
+ypf_FOP:0 "YPF"
+fabricaciones_militares_FOP:0 "Fabricaciones Militares"
+hispano_argentina_FOP:0 "Hispano-Argentina"
+seccion_industrial_amasadoras_mecanicas_FOP:0 "Sección Industrial Amasadoras Mecánicas"
+fabrica_militar_aviones_FOP:0 "Fábrica Militar de Aviones"
+afne_FOP:0 "AFNE"
+astarsa_FOP:0 "ASTARSA"
+astilleros_alianza_FOP:0 "Astilleros Alianza"
+
 ### Fengtian ###
-mantetsu_industrial_subsiduaries:0 "Mantetsu Industrial Subsidiaries"
-shenyang_arsenal:0 "Shenyang Arsenal"
-minsheng_automobile_company:0 "Minsheng Automobile Company"
-mitsubishi_heavy_industries:0 "Mitsubishi Heavy Industries"
-manchuria_airplane_company:0 "Dongbei Airplane Manufacturing Company"
-manchuria_aviation_company:0 "Manchuria Aviation Company"
+mantetsu_industrial_subsiduaries:0 "만철 산업 회사"
+shenyang_arsenal:0 "선양 무기 제조사"
+minsheng_automobile_company:0 "민생 자동차 회사"
+mitsubishi_heavy_industries:0 "미쯔비시 중공업"
+manchuria_airplane_company:0 "둥베이 항공기 제조 회사"
+manchuria_aviation_company:0 "만주 항공사"
 
 ### Finland ###
 nokia:0 "노키아"
@@ -397,6 +418,10 @@ fabrica_militar_aviones:0 "Fábrica Militar de Aviones"
 afne:0 "AFNE"
 astarsa:0 "ASTARSA"
 astilleros_alianza:0 "Astilleros Alianza"
+argentina_bmw:0 "BMW 아르헨티나"
+argentina_mauser:0 "마우저 아르헨티나"
+argentina_fokker:0 "포커 아르헨티나"
+argentina_frc:0 "FRC 아르헨티나"
 
 ### Lithuania ###
 achema:0 "Linkaičių artilerijos dirbtuvės"
@@ -506,12 +531,12 @@ nylands_verksted:0 "Nylands Verksted"
 karabuk_demir:0 "Karabük Demir Çelik Fabrikaları"
 koc_elektrik:0 "Koçzade Elektrik"
 deutsch_osmanisches:0 "Deutsch-Osmanisches Mineralölunternehmen"
-mauser_osmanen:0 "Mauser Osmanen"
+mauser_osmanen:0 "마우저 오스만 제국"
 ankara_tufek:0 "Ankara Tüfek Fabrikası"
 sarsilmaz:0 "Sarsılmaz"
 zeytinburnu_fabrika:0 "Zeytinburnu Fabrika-i Hümayunu"
 mke_ottoman:0 "MKE Top Fabrikası"
-opel_osmanen:0 "Opel Tophane"
+opel_osmanen:0 "오펠 톱하네"
 uzel_traktor:0 "Uzel Traktör Fabrikası"
 eskisehir_lokomotif:0 "Eskişehir Lokomotif Fabrikası"
 hurkus:0 "Hürkuş"
@@ -526,17 +551,26 @@ westinghouse:0 "웨스팅하우스"
 socal:0 "캘리포니아 표준 정유"
 browning:0 "브라우닝"
 mack_trucks:0 "맥"
-pacific_car_and_foundry:0 "Pacific Car and Foundry"
-packard:0 "Packard"
-lockheed:0 "Lockheed"
+pacific_car_and_foundry:0 "태평양 자동차 및 주조회사"
+packard:0 "패커드"
+lockheed:0 "록히드"
 ryan_aircraft:0 "Ryan"
-douglas:0 "Douglas"
+douglas:0 "더글라스"
 glenn_martin:0 "Glenn L. Martin Company"
 northrop:0 "Northrop Corporation"
 vultee_aircraft:0 "Vultee"
 hughes_aircraft:0 "Hughes Aircraft"
-kaiser_shipyards:0 "Kaiser Shipyards"
+kaiser_shipyards:0 "카이저 조선소"
 mare_island_shipyard:0 "Mare Island Naval Shipyard"
+
+### Paraguay ###
+AA:0 "Arsenal de Asunción"
+CAP:0 "Compañía Aviadora Paraguaya"
+CSA_PAR:0 "Casado S.A."
+DIMABEL:0 "DIMABEL"
+PCB:0 "PCB"
+PFA:0 "Puerto Fluvial de Asunción"
+UNA:0 "Universidad Nacional de Asunción"
 
 ### Poland ###
 cop:0 "COP"
@@ -984,39 +1018,39 @@ john_brown_company:0 "John Brown & Company's Union"
 cammell_laird:0 "Cammell Laird Union"
 
 ### United Baltic Duchy ###
-baltische_schieferol_konsortium:0 "Baltische Schieferöl-Konsortium"
-arsenal_tallinn:0 "Arsenal Tallinn"
-vairogs:0 "Vairogs"
+baltische_schieferol_konsortium:0 "Baltisches Schieferöl-Konsortium"
+arsenal_tallinn:0 "아스널 탈린"
+vairogs:0 "바이록스"
 rigas_autobusu_fabrika:0 "Rīgas Autobusu Fabrika"
 vef:0 "VEF"
 liepajas_kara:0 "Liepājas Kara Ostas Darbnīcas"
 riga_shipyard:0 "Rīgas Kuģu Būvētava"
 
 ### USA ###
-bethlehem_steel:0 "Bethlehem Steel"
-general_electric:0 "General Electric"
+bethlehem_steel:0 "베슬리헴스틸"
+general_electric:0 "제너럴일렉트릭"
 ibm_company:0 "IBM"
-standard_oil_usa:0 "Standard Oil"
-colt:0 "Colt"
-winchester_western:0 "Winchester Western"
-kr_springfield_armory:0 "Springfield Armoury"
-watervliet_arsenal:0 "Watervliet Arsenal"
-studebacker:0 "Studebacker"
-lima_locomotive_works:0 "Lima Locomotive Works"
-kr_chrysler:0 "Chrysler"
-kr_ford_usa:0 "Ford"
-kr_general_motors:0 "General Motors"
-catterpillar:0 "Catterpillar"
-kr_north_american_aviation:0 "North American Aviation"
-kr_bell_aircraft:0 "Bell"
-beechcraft:0 "Beechcraft"
-kr_grumman:0 "Grumman"
-kr_boeing:0 "Boeing"
-kr_curtiss_wright:0 "Curtiss-Wright"
-kr_newport_news:0 "Newport News Shipbuilding"
-kr_norfolk_shipyard:0 "Norfolk Naval Yard"
-new_york_shipbuilding:0 "New York Shipbuilding Corporation"
-kr_electric_boat:0 "Electric Boat"
+standard_oil_usa:0 "스탠다드 오일"
+colt:0 "콜트"
+winchester_western:0 "윈체스터 웨스턴"
+kr_springfield_armory:0 "스프링필드 아머리"
+watervliet_arsenal:0 "워터브리엣 아스널"
+studebacker:0 "스튜드배커"
+lima_locomotive_works:0 "리마 로코모티브 워크스"
+kr_chrysler:0 "크라이슬러"
+kr_ford_usa:0 "포드"
+kr_general_motors:0 "제너럴모터스"
+catterpillar:0 "캐터필러"
+kr_north_american_aviation:0 "북아메리카 항공"
+kr_bell_aircraft:0 "벨"
+beechcraft:0 "비치크라프트"
+kr_grumman:0 "그러먼"
+kr_boeing:0 "보잉"
+kr_curtiss_wright:0 "커티스 라이트"
+kr_newport_news:0 "뉴포트뉴스 조선소"
+kr_norfolk_shipyard:0 "노퍽 조선소"
+new_york_shipbuilding:0 "뉴욕 조선 주식회사"
+kr_electric_boat:0 "일렉트릭 보트"
 
 ### Belorussia ###
 white_ruthenia_state_university:0 "Belorussia State University"
@@ -1036,7 +1070,7 @@ armo:0 "ARMO"
 ganz_albania:0 "Ganz Albania"
 hekurudha_shqiptare:0 "Hekurudha Shqiptare"
 pasha_liman_kantjerin:0 "Pasha Liman Kantjerin"
-albatros_albania:0 "Albatros Albania"
+albatros_albania:0 "Albatros Albanien"
 arsenal_ushtria_tirane:0 "Arsenal Ushtria Tiranë"
 
 ### Allgemeine Ostasiatische Gesellschaft ###
@@ -1052,34 +1086,35 @@ kaiserliche_werft_guangzhou:0 "Kaiserliche Werft Guangzhou"
 
 ### Germany ###
 krupp:0 "크루프 AG"
+deutscher_kaiser:0 "Gewerkschaft Deutscher Kaiser"
+koenigslaura:0 "Vereinigte Königs- und Laurahütte"
 krupp2:0 "크루프 AG 모노폴"
-vereinigte_stahlwerke:0 "Vereinigte Stahlwerke AG"
 aeg:0 "AEG"
 braun_company:0 "브라운"
 ig_farben_company:0 "파르벤 이익공동체"
 mauser:0 "마우저"
 erma_werke:0 "에르마 베르케"
-haenel:0 "Haenel"
-sauer_sohn:0 "Sauer & Sohn"
+haenel:0 "해넬"
+sauer_sohn:0 "사우어 앤 손"
 walther:0 "발터"
 rheinmetall:0 "라인메탈"
 opel:0 "오펠"
-hanomag:0 "Hanomag"
+hanomag:0 "하노마그"
 porsche:0 "포르쉐"
 adler:0 "아들러"
 bmw:0 "BMW"
 man_company:0 "MAN"
 daimler_benz:0 "다임러-벤츠"
-vomag:0 "Vomag"
-maybach:0 "Maybach"
-albatros:0 "Albatros"
-fokker_ger:0 "Fokker"
-dornier:0 "Dornier"
-fieseler_company:0 "Fieseler"
-focke_wulf:0 "Focke Wulf"
+vomag:0 "포마그"
+maybach:0 "마이바흐"
+albatros:0 "알바트로스"
+fokker_ger:0 "포커"
+dornier:0 "도르니에"
+fieseler_company:0 "피젤러"
+focke_wulf:0 "포케불프"
 gothaer_waggonfabrik:0 "Gothaer Waggonfabrik"
-heinkel:0 "Heinkel"
-henschel:0 "Henschel"
+heinkel:0 "하잉켈"
+henschel:0 "핸셸"
 junkers:0 "융커스"
 luftschiffbau_zeppelin:0 "Luftschiffbau Zeppelin"
 messerschmitt:0 "Messerschmitt"
@@ -1227,6 +1262,16 @@ societa_toscana:0 "Società Toscana Costruzioni Meccaniche"
 universita_firenze:0 "Università di Firenze"
 raffineria_livorno_tus:0 "Raffineria di Livorno"
 
+### Uruguay ###
+ancap:0 "ANCAP"
+aeg_urg:0 "AEG Uruguay"
+imbel_urg:0 "IMBEL"
+adm:0 "Armas de Montevideo"
+hispano_urg:0 "Hispano-Uruguay"
+bmw_urg:0 "BMW"
+fokker_urg:0 "Fokker"
+ao_urg:0 "Astillero Oriental"
+
 ### Venice ###
 accademia_navale_venezia_vnc:0 "Accademia Navale di Venezia"
 arsenale_venezia_vnc:0 "Arsenale di Venezia"
@@ -1254,7 +1299,14 @@ WLL_Andre_Becquet_mil_th:0 "André Becquet"
 ### Nejd ###
 mitteleuropa_weaponry:0 "Mitteleuropean Weaponry"
 
-
+### Venezuela ###
+VEN_sivensa:0 "Siderúrgica Venezolana S.A."
+VEN_cvp:0 "Corporación Venezolana del Petróleo"
+VEN_cavim:0 "Compañía Anónima Venezolana de Industrias Militares"
+VEN_dmm:0 "División Metal-mecánica de la CAVIM"
+VEN_iafe:0 "Instituto Autónomo Ferrocarriles del Estado"
+VEN_eam:0 "Escuela de Aviación Militar"
+VEN_env:0 "Escuela Naval de Venezuela"
 
 
 
