7월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -97,21 +97,78 @@ SER_YUG_national_populist:0 "유고슬라비아"
 SER_YUG_national_populist_ADJ:0 "유고슬라비아"
 SER_YUG_national_populist_DEF:0 "유고슬라비아"
 
+NPA_totalist:0 "National Protection Alliance"
+NPA_totalist_ADJ:0 "NPA"
+NPA_totalist_DEF:0 "the National Protection Alliance"
+NPA_syndicalist:0 "National Protection Alliance"
+NPA_syndicalist_ADJ:0 "NPA"
+NPA_syndicalist_DEF:0 "the National Protection Alliance"
+NPA_radical_socialist:0 "National Protection Alliance"
+NPA_radical_socialist_ADJ:0 "NPA"
+NPA_radical_socialist_DEF:0 "the National Protection Alliance"
+NPA_social_democrat:0 "National Protection Alliance"
+NPA_social_democrat_ADJ:0 "NPA"
+NPA_social_democrat_DEF:0 "the National Protection Alliance"
+NPA_social_liberal:0 "National Protection Alliance"
+NPA_social_liberal_ADJ:0 "NPA"
+NPA_social_liberal_DEF:0 "the National Protection Alliance"
+NPA_market_liberal:0 "National Protection Alliance"
+NPA_market_liberal_ADJ:0 "NPA"
+NPA_market_liberal_DEF:0 "the National Protection Alliance"
+NPA_social_conservative:0 "National Protection Alliance"
+NPA_social_conservative_ADJ:0 "NPA"
+NPA_social_conservative_DEF:0 "the National Protection Alliance"
+NPA_authoritarian_democrat:0 "National Protection Alliance"
+NPA_authoritarian_democrat_ADJ:0 "NPA"
+NPA_authoritarian_democrat_DEF:0 "the National Protection Alliance"
+NPA_paternal_autocrat:0 "National Protection Alliance"
+NPA_paternal_autocrat_ADJ:0 "NPA"
+NPA_paternal_autocrat_DEF:0 "the National Protection Alliance"
+NPA_national_populist:0 "National Protection Alliance"
+NPA_national_populist_ADJ:0 "NPA"
+NPA_national_populist_DEF:0 "the National Protection Alliance"
+
+TIE_totalist:0 "중화인민공화국"
+TIE_totalist_ADJ:0 "중국"
+TIE_totalist_DEF:0 "중화인민공화국"
+TIE_syndicalist:0 "중화인민공화국"
+TIE_syndicalist_ADJ:0 "중국"
+TIE_syndicalist_DEF:0 "중화인민공화국"
+TIE_radical_socialist:0 "중화인민공화국"
+TIE_radical_socialist_ADJ:0 "중국"
+TIE_radical_socialist_DEF:0 "중화인민공화국"
+TIE_social_democrat:0 "천 제국"
+TIE_social_democrat_ADJ:0 "천"
+TIE_social_democrat_DEF:0 "천 제국"
+TIE_social_liberal:0 "천 제국"
+TIE_social_liberal_ADJ:0 "천"
+TIE_social_liberal_DEF:0 "천 제국"
+TIE_market_liberal:0 "천 제국"
+TIE_market_liberal_ADJ:0 "천"
+TIE_market_liberal_DEF:0 "천 제국"
+TIE_social_conservative:0 "천 제국"
+TIE_social_conservative_ADJ:0 "천"
+TIE_social_conservative_DEF:0 "천 제국"
+TIE_authoritarian_democrat:0 "천 제국"
+TIE_authoritarian_democrat_ADJ:0 "천"
+TIE_authoritarian_democrat_DEF:0 "천 제국"
+TIE_paternal_autocrat:0 "천 제국"
+TIE_paternal_autocrat_ADJ:0 ""
+TIE_paternal_autocrat_DEF:0 "천 제국"
+TIE_national_populist:0 "천 제국"
+TIE_national_populist_ADJ:0 "천"
+TIE_national_populist_DEF:0 "천 제국"
+
 RRM_republic_social_democrat:0 "루마니아 공화국"
-RRM_republic_social_democrat_DEF:0 "루마니아 공화국"
-                                                          
+RRM_republic_social_democrat_DEF:0 "루마니아 공화국"  
 RRM_republic_social_liberal:0 "루마니아 공화국"
 RRM_republic_social_liberal_DEF:0 "루마니아 공화국"
-                                                         
 RRM_republic_market_liberal:0 "루마니아 공화국"
-RRM_republic_market_liberal_DEF:0 "루마니아 공화국"
-                                                         
+RRM_republic_market_liberal_DEF:0 "루마니아 공화국"                                                         
 RRM_republic_social_conservative:0 "루마니아 공화국"
-RRM_republic_social_conservative_DEF:0 "루마니아 공화국"
-                                                              
+RRM_republic_social_conservative_DEF:0 "루마니아 공화국"                                                              
 RRM_republic_authoritarian_democrat:0 "루마니아 공화국"
-RRM_republic_authoritarian_democrat_DEF:0 "루마니아 공화국"
-                                                                 
+RRM_republic_authoritarian_democrat_DEF:0 "루마니아 공화국"                                                                 
 RRM_republic_paternal_autocrat:0 "루마니아 공화국"
 RRM_republic_paternal_autocrat_DEF:0 "루마니아 공화국"
 
@@ -514,37 +571,36 @@ LYB_LYB_totalist:0 "리비아 인민 아랍 공화국"
 LYB_LYB_totalist_ADJ:0 "리비아인민공화국"
 LYB_LYB_totalist_DEF:0 "리비아 인민 아랍 공화국"
 
-LYB_IFR_authoritarian_democrat:0 "이프리키야"
-LYB_IFR_authoritarian_democrat_ADJ:0 "이프리키야"
-LYB_IFR_authoritarian_democrat_DEF:0 "이프리키야"
-LYB_IFR_market_liberal:0 "이프리키야"
-LYB_IFR_market_liberal_ADJ:0 "이프리키야"
-LYB_IFR_market_liberal_DEF:0 "이프리키야"
-LYB_IFR_national_populist:0 "이프리키야"
-LYB_IFR_national_populist_ADJ:0 "이프리키야"
-LYB_IFR_national_populist_DEF:0 "이프리키야"
-LYB_IFR_paternal_autocrat:0 "이프리키야 왕국"
-LYB_IFR_paternal_autocrat_ADJ:0 "이프리키야"
-LYB_IFR_paternal_autocrat_DEF:0 "이프리키야 왕국"
-LYB_IFR_radical_socialist:0 "리비아 튀니지 연방"
-LYB_IFR_radical_socialist_ADJ:0 "리비아 튀니지"
-LYB_IFR_radical_socialist_DEF:0 "리비아 튀니지 연방"
-LYB_IFR_social_conservative:0 "이프리키야"
-LYB_IFR_social_conservative_ADJ:0 "이프리키야"
-LYB_IFR_social_conservative_DEF:0 "이프리키야"
-LYB_IFR_social_democrat:0 "이프리키야"
-LYB_IFR_social_democrat_ADJ:0 "이프리키야"
-LYB_IFR_social_democrat_DEF:0 "이프리키야"
-LYB_IFR_social_liberal:0 "이프리키야"
-LYB_IFR_social_liberal_ADJ:0 "이프리키야"
-LYB_IFR_social_liberal_DEF:0 "이프리키야"
-LYB_IFR_syndicalist:0 "리비아 튀니지 연방"
-LYB_IFR_syndicalist_ADJ:0 "리비아 튀니지"
-LYB_IFR_syndicalist_DEF:0 "리비아 튀니지 연방"
-LYB_IFR_totalist:0 "리비아 튀니지 연방"
-LYB_IFR_totalist_ADJ:0 "리비아 튀니지"
-LYB_IFR_totalist_DEF:0 "리비아 튀니지 연방"
-
+IFR_authoritarian_democrat:0 "이프리키야"
+IFR_authoritarian_democrat_ADJ:0 "이프리키야"
+IFR_authoritarian_democrat_DEF:0 "이프리키야"
+IFR_market_liberal:0 "이프리키야"
+IFR_market_liberal_ADJ:0 "이프리키야"
+IFR_market_liberal_DEF:0 "이프리키야"
+IFR_national_populist:0 "이프리키야"
+IFR_national_populist_ADJ:0 "이프리키야"
+IFR_national_populist_DEF:0 "이프리키야"
+IFR_paternal_autocrat:0 "이프리키야 왕국"
+IFR_paternal_autocrat_ADJ:0 "이프리키야"
+IFR_paternal_autocrat_DEF:0 "이프리키야 왕국"
+IFR_radical_socialist:0 "리비아 튀니지 연방"
+IFR_radical_socialist_ADJ:0 "리비아 튀니지"
+IFR_radical_socialist_DEF:0 "리비아 튀니지 연방"
+IFR_social_conservative:0 "이프리키야"
+IFR_social_conservative_ADJ:0 "이프리키야"
+IFR_social_conservative_DEF:0 "이프리키야"
+IFR_social_democrat:0 "이프리키야"
+IFR_social_democrat_ADJ:0 "이프리키야"
+IFR_social_democrat_DEF:0 "이프리키야"
+IFR_social_liberal:0 "이프리키야"
+IFR_social_liberal_ADJ:0 "이프리키야"
+IFR_social_liberal_DEF:0 "이프리키야"
+IFR_syndicalist:0 "리비아 튀니지 연방"
+IFR_syndicalist_ADJ:0 "리비아 튀니지"
+IFR_syndicalist_DEF:0 "리비아 튀니지 연방"
+IFR_totalist:0 "리비아 튀니지 연방"
+IFR_totalist_ADJ:0 "리비아 튀니지"
+IFR_totalist_DEF:0 "리비아 튀니지 연방"
 
 GBR_republic_authoritarian_democrat:0 "브리튼 공화국"
 GBR_republic_authoritarian_democrat_ADJ:0 "영국"
@@ -850,40 +906,12 @@ BAT_FED_totalist:0 "발트 연합"
 BAT_FED_totalist_ADJ:0 "발트"
 BAT_FED_totalist_DEF:0 "발트 연합"
 
-BAT_PRI_authoritarian_democrat:0 "프리발티카"
-BAT_PRI_authoritarian_democrat_ADJ:0 "발트"
-BAT_PRI_authoritarian_democrat_DEF:0 "프리발티카"
-BAT_PRI_market_liberal:0 "프리발티카"
-BAT_PRI_market_liberal_ADJ:0 "발트"
-BAT_PRI_market_liberal_DEF:0 "프리발티카"
-BAT_PRI_national_populist:0 "프리발티카"
-BAT_PRI_national_populist_ADJ:0 "발트"
-BAT_PRI_national_populist_DEF:0 "프리발티카"
-BAT_PRI_paternal_autocrat:0 "프리발티카"
-BAT_PRI_paternal_autocrat_ADJ:0 "발트"
-BAT_PRI_paternal_autocrat_DEF:0 "프리발티카"
-BAT_PRI_radical_socialist:0 "프리발티카"
-BAT_PRI_radical_socialist_ADJ:0 "발트"
-BAT_PRI_radical_socialist_DEF:0 "프리발티카"
-BAT_PRI_social_conservative:0 "프리발티카"
-BAT_PRI_social_conservative_ADJ:0 "발트"
-BAT_PRI_social_conservative_DEF:0 "프리발티카"
-BAT_PRI_social_democrat:0 "프리발티카"
-BAT_PRI_social_democrat_ADJ:0 "발트"
-BAT_PRI_social_democrat_DEF:0 "프리발티카"
-BAT_PRI_social_liberal:0 "프리발티카"
-BAT_PRI_social_liberal_ADJ:0 "발트"
-BAT_PRI_social_liberal_DEF:0 "프리발티카"
-BAT_PRI_syndicalist:0 "프리발티카"
-BAT_PRI_syndicalist_ADJ:0 "발트"
-BAT_PRI_syndicalist_DEF:0 "프리발티카"
-BAT_PRI_totalist:0 "프리발티카"
-BAT_PRI_totalist_ADJ:0 "발트"
-BAT_PRI_totalist_DEF:0 "프리발티카"
-
-BAT_GER_paternal_autocrat:0 "발트 주"
-BAT_GER_paternal_autocrat_ADJ:0 "발트"
-BAT_GER_paternal_autocrat_DEF:0 "발트 주"
+BAT_GER_authoritarian_democrat:0 "Baltischer Staat"
+BAT_GER_authoritarian_democrat_ADJ:0 "Baltic"
+BAT_GER_authoritarian_democrat_DEF:0 "the Baltischer Staat"
+BAT_GER_paternal_autocrat:0 "Baltisches Herzogtum"
+BAT_GER_paternal_autocrat_ADJ:0 "Baltic"
+BAT_GER_paternal_autocrat_DEF:0 "the Baltisches Herzogtum"
 
 ITA_kingdom_authoritarian_democrat:0 "이탈리아 왕국"
 ITA_kingdom_authoritarian_democrat_ADJ:0 "이탈리아"
@@ -1908,37 +1936,6 @@ PHW_totalist:0 "필리핀 사회주의공화국"
 PHW_totalist_ADJ:0 "필리핀"
 PHW_totalist_DEF:0 "필리핀 사회주의공화국"
 
-AGT_authoritarian_democrat:0 "아르헨티나"
-AGT_authoritarian_democrat_ADJ:0 "아르헨티나"
-AGT_authoritarian_democrat_DEF:0 "아르헨티나"
-AGT_market_liberal:0 "아르헨티나"
-AGT_market_liberal_ADJ:0 "아르헨티나"
-AGT_market_liberal_DEF:0 "아르헨티나"
-AGT_national_populist:0 "아르헨티나"
-AGT_national_populist_ADJ:0 "아르헨티나"
-AGT_national_populist_DEF:0 "아르헨티나"
-AGT_paternal_autocrat:0 "아르헨티나"
-AGT_paternal_autocrat_ADJ:0 "아르헨티나"
-AGT_paternal_autocrat_DEF:0 "아르헨티나"
-AGT_radical_socialist:0 "아르헨티나 코뮌"
-AGT_radical_socialist_ADJ:0 "아르헨티나"
-AGT_radical_socialist_DEF:0 "아르헨티나 코뮌"
-AGT_social_conservative:0 "아르헨티나"
-AGT_social_conservative_ADJ:0 "아르헨티나"
-AGT_social_conservative_DEF:0 "아르헨티나"
-AGT_social_democrat:0 "아르헨티나"
-AGT_social_democrat_ADJ:0 "아르헨티나"
-AGT_social_democrat_DEF:0 "아르헨티나"
-AGT_social_liberal:0 "아르헨티나"
-AGT_social_liberal_ADJ:0 "아르헨티나"
-AGT_social_liberal_DEF:0 "아르헨티나"
-AGT_syndicalist:0 "아르헨티나 연합 생디칼리즘정"
-AGT_syndicalist_ADJ:0 "아르헨티나"
-AGT_syndicalist_DEF:0 "아르헨티나 연합 생디칼리즘정"
-AGT_totalist:0 "아르헨티나 코뮌"
-AGT_totalist_ADJ:0 "아르헨티나"
-AGT_totalist_DEF:0 "아르헨티나 코뮌"
-
 UKR_communist_authoritarian_democrat:0 "우크라이나 사회주의공화국"
 UKR_communist_authoritarian_democrat_ADJ:0 "우크라이나"
 UKR_communist_authoritarian_democrat_DEF:0 "우크라이나 사회주의공화국"
@@ -1976,15 +1973,15 @@ PBC_authoritarian_democrat_DEF:0 "페루-볼리비아 연맹"
 PBC_market_liberal:0 "페루-볼리비아 연맹"
 PBC_market_liberal_ADJ:0 "페루-볼리비아"
 PBC_market_liberal_DEF:0 "페루-볼리비아 연맹"
-PBC_national_populist:0 "페루-볼리비아 역"
-PBC_national_populist_ADJ:0 "페루-볼리비아"
-PBC_national_populist_DEF:0 "페루-볼리비아 역"
+PBC_national_populist:0 "그란페루"
+PBC_national_populist_ADJ:0 "페루"
+PBC_national_populist_DEF:0 "그란페루"
 PBC_paternal_autocrat:0 "페루-볼리비아 연맹"
 PBC_paternal_autocrat_ADJ:0 "페루-볼리비아"
 PBC_paternal_autocrat_DEF:0 "페루-볼리비아 연맹"
-PBC_radical_socialist:0 "안데스 연합"
+PBC_radical_socialist:0 "안데스 포퓰러 연맹"
 PBC_radical_socialist_ADJ:0 "안데스"
-PBC_radical_socialist_DEF:0 "안데스 연합"
+PBC_radical_socialist_DEF:0 "안데스 포퓰러 연맹"
 PBC_social_conservative:0 "페루-볼리비아 연맹"
 PBC_social_conservative_ADJ:0 "페루-볼리비아"
 PBC_social_conservative_DEF:0 "페루-볼리비아 연맹"
@@ -1994,12 +1991,12 @@ PBC_social_democrat_DEF:0 "페루-볼리비아 연맹"
 PBC_social_liberal:0 "페루-볼리비아 연맹"
 PBC_social_liberal_ADJ:0 "페루-볼리비아"
 PBC_social_liberal_DEF:0 "페루-볼리비아 연맹"
-PBC_syndicalist:0 "페루-볼리비아 연합 생디칼리즘정"
-PBC_syndicalist_ADJ:0 "페루-볼리비아"
-PBC_syndicalist_DEF:0 "페루-볼리비아 연합 생디칼리즘정"
-PBC_totalist:0 "안데스 코뮌"
+PBC_syndicalist:0 "안데스 포퓰러 연맹"
+PBC_syndicalist_ADJ:0 "안데스"
+PBC_syndicalist_DEF:0 "안데스 포퓰러 연맹"
+PBC_totalist:0 "안데스 포퓰러 연맹"
 PBC_totalist_ADJ:0 "안데스"
-PBC_totalist_DEF:0 "안데스 코뮌"
+PBC_totalist_DEF:0 "안데스 포퓰러 연맹"
 
 GCL_authoritarian_democrat:0 "그란콜롬비아"
 GCL_authoritarian_democrat_ADJ:0 "콜롬비아"
@@ -2025,12 +2022,12 @@ GCL_social_democrat_DEF:0 "그란콜롬비아"
 GCL_social_liberal:0 "그란콜롬비아"
 GCL_social_liberal_ADJ:0 "콜롬비아"
 GCL_social_liberal_DEF:0 "그란콜롬비아"
-GCL_syndicalist:0 "대콜롬비아 연합 생디칼리즘정"
+GCL_syndicalist:0 "그란콜롬비아"
 GCL_syndicalist_ADJ:0 "콜롬비아"
 GCL_syndicalist_DEF:0 "대콜롬비아 연합 생디칼리즘정"
-GCL_totalist:0 "대콜롬비아 코뮌"
+GCL_totalist:0 "그란콜롬비아"
 GCL_totalist_ADJ:0 "콜롬비아"
-GCL_totalist_DEF:0 "대콜롬비아 코뮌"
+GCL_totalist_DEF:0 "그란콜롬비아"
 
 LIT_republican_authoritarian_democrat:0 "리투아니아 국민공화국"
 LIT_republican_authoritarian_democrat_ADJ:0 "리투아니아"
@@ -2159,37 +2156,6 @@ ALO_KAZ_syndicalist_DEF:0 "알라쉬 오르다"
 ALO_KAZ_totalist:0 "알라쉬 오르다"
 ALO_KAZ_totalist_ADJ:0 "카자흐스탄"
 ALO_KAZ_totalist_DEF:0 "알라쉬 오르다"
-
-DEI_authoritarian_democrat:0 "네덜란드령 동인도제도"
-DEI_authoritarian_democrat_ADJ:0 "인도네시아"
-DEI_authoritarian_democrat_DEF:0 "네덜란드령 동인도제도"
-DEI_market_liberal:0 "네덜란드령 동인도제도"
-DEI_market_liberal_ADJ:0 "인도네시아"
-DEI_market_liberal_DEF:0 "네덜란드령 동인도제도"
-DEI_national_populist:0 "네덜란드령 동인도제도"
-DEI_national_populist_ADJ:0 "인도네시아"
-DEI_national_populist_DEF:0 "네덜란드령 동인도제도"
-DEI_paternal_autocrat:0 "네덜란드령 동인도제도"
-DEI_paternal_autocrat_ADJ:0 "마자파힛"
-DEI_paternal_autocrat_DEF:0 "네덜란드령 동인도제도"
-DEI_radical_socialist:0 "네덜란드령 동인도제도"
-DEI_radical_socialist_ADJ:0 "인도네시아"
-DEI_radical_socialist_DEF:0 "네덜란드령 동인도제도"
-DEI_social_conservative:0 "네덜란드령 동인도제도"
-DEI_social_conservative_ADJ:0 "인도네시아"
-DEI_social_conservative_DEF:0 "네덜란드령 동인도제도"
-DEI_social_democrat:0 "네덜란드령 동인도제도"
-DEI_social_democrat_ADJ:0 "인도네시아"
-DEI_social_democrat_DEF:0 "네덜란드령 동인도제도"
-DEI_social_liberal:0 "네덜란드령 동인도제도"
-DEI_social_liberal_ADJ:0 "인도네시아"
-DEI_social_liberal_DEF:0 "네덜란드령 동인도제도"
-DEI_syndicalist:0 "네덜란드령 동인도제도"
-DEI_syndicalist_ADJ:0 "인도네시아"
-DEI_syndicalist_DEF:0 "네덜란드령 동인도제도"
-DEI_totalist:0 "네덜란드령 동인도제도"
-DEI_totalist_ADJ:0 "인도네시아"
-DEI_totalist_DEF:0 "네덜란드령 동인도제도"
 
 SAF_federation_authoritarian_democrat:0 "남아프리카 연방"
 SAF_federation_authoritarian_democrat_ADJ:0 "남아프리카"
@@ -2481,13 +2447,6 @@ MOR_GER_subject:0 "모로코"
 MOR_GER_subject_ADJ:0 "모로코"
 MOR_GER_subject_DEF:0 "모로코"
 
-CRE_GRE_subject:0 "크레타 주"
-CRE_GER_subject_ADJ:0 "크레타"
-CRE_GRE_subject_DEF:0 "크레타 주"
-CRE_OTT_subject:0 "크레타 윌라야"
-CRE_OTT_subject_DEF:0 "크레타 윌라야"
-CRE_OTT_subject_ADJ:0 "크레타"
-
 SOM_GER_subject: "소말리아 왕국"
 SOM_GER_subject_DEF:0 "소말리아"
 SOM_GER_subject_ADJ:0 "소말리아 왕국"
@@ -2520,9 +2479,9 @@ NAM_GER_subject:0 "남서아프리카"
 NAM_GER_subject_ADJ:0 "남서아프리카"
 NAM_GER_subject_DEF:0 "남서아프리카"
 
-LBR_AUTHDEM_subject:0 "라이베리아 자치령"
-LBR_AUTHDEM_subject_ADJ:0 "라이베리아"
-LBR_AUTHDEM_subject_DEF:0 "라이베리아 자치령"
+LIB_AUTHDEM_subject:0 "라이베리아 자치령"
+LIB_AUTHDEM_subject_ADJ:0 "라이베리아"
+LIB_AUTHDEM_subject_DEF:0 "라이베리아 자치령"
 
 KEN_GER_subject:0 "케냐"
 KEN_GER_subject_ADJ:0 "케냐"
@@ -3518,5 +3477,129 @@ RPO_national_populist:0 "포르투갈"
 RPO_national_populist_ADJ:0 "포르투갈"
 RPO_national_populist_DEF:0 "포르투갈"
 
+GRE_kingdom_totalist:0 "헬레닉 사회주의 공화국"
+GRE_kingdom_totalist_ADJ:0 "그리스"
+GRE_kingdom_totalist_DEF:0 "헬레닉 사회주의 공화국"
+GRE_kingdom_syndicalist:0 "헬레닉 사회주의 공화국"
+GRE_kingdom_syndicalist_ADJ:0 "그리스"
+GRE_kingdom_syndicalist_DEF:0 "헬레닉 사회주의 공화국"
+GRE_kingdom_radical_socialist:0 "헬레닉 사회주의 공화국"
+GRE_kingdom_radical_socialist_ADJ:0 "그리스"
+GRE_kingdom_radical_socialist_DEF:0 "헬레닉 사회주의 공화국"
+GRE_kingdom_social_democrat:0 "그리스 왕국"
+GRE_kingdom_social_democrat_ADJ:0 "그리스"
+GRE_kingdom_social_democrat_DEF:0 "그리스 왕국"
+GRE_kingdom_social_liberal:0 "그리스 왕국"
+GRE_kingdom_social_liberal_ADJ:0 "그리스"
+GRE_kingdom_social_liberal_DEF:0 "그리스 왕국"
+GRE_kingdom_market_liberal:0 "그리스 왕국"
+GRE_kingdom_market_liberal_ADJ:0 "그리스"
+GRE_kingdom_market_liberal_DEF:0 "그리스 왕국"
+GRE_kingdom_social_conservative:0 "그리스 왕국"
+GRE_kingdom_social_conservative_ADJ:0 "그리스"
+GRE_kingdom_social_conservative_DEF:0 "그리스 왕국"
+GRE_kingdom_authoritarian_democrat:0 "그리스 왕국"
+GRE_kingdom_authoritarian_democrat_ADJ:0 "그리스"
+GRE_kingdom_authoritarian_democrat_DEF:0 "그리스 왕국"
+GRE_kingdom_paternal_autocrat:0 "그리스 왕국"
+GRE_kingdom_paternal_autocrat_ADJ:0 "그리스"
+GRE_kingdom_paternal_autocrat_DEF:0 "그리스 왕국"
+GRE_kingdom_national_populist:0 "그리스 왕국"
+GRE_kingdom_national_populist_ADJ:0 "그리스"
+GRE_kingdom_national_populist_DEF:0 "그리스 왕국"
+
 OTT_lost_war:0 "터키 임시 정부"
 OTT_lost_war_DEF:0 "터키 임시 정부"
+
+NUSCOM_totalist:0 "Nusantara Communes"
+NUSCOM_totalist_ADJ:0 "Nustantaran"
+NUSCOM_totalist_DEF:0 "the Nusantara Communes"
+NUSCOM_syndicalist:0 "Nusantara Communes"
+NUSCOM_syndicalist_ADJ:0 "Insulindian"
+NUSCOM_syndicalist_DEF:0 "the Nusantara Communes"
+NUSCOM_radical_socialist:0 "Nusantara Communes"
+NUSCOM_radical_socialist_ADJ:0 "Nusantaran"
+NUSCOM_radical_socialist_DEF:0 "the Nusantara Communes"
+NUSCOM_social_democrat:0 "Insulindia"
+NUSCOM_social_democrat_ADJ:0 "Insulindian"
+NUSCOM_social_democrat_DEF:0 "Insulindia"
+NUSCOM_social_liberal:0 "Insulindia"
+NUSCOM_social_liberal_ADJ:0 "Insulindian"
+NUSCOM_social_liberal_DEF:0 "Insulindia"
+NUSCOM_market_liberal:0 "Insulindia"
+NUSCOM_market_liberal_ADJ:0 "Insulindian"
+NUSCOM_market_liberal_DEF:0 "Insulindia"
+NUSCOM_social_conservative:0 "Insulindia"
+NUSCOM_social_conservative_ADJ:0 "Insulindian"
+NUSCOM_social_conservative_DEF:0 "Insulindia"
+NUSCOM_authoritarian_democrat:0 "Insulindia"
+NUSCOM_authoritarian_democrat_ADJ:0 "Insulindian"
+NUSCOM_authoritarian_democrat_DEF:0 "Insulindia"
+NUSCOM_paternal_autocrat:0 "Islamic State of Insulindia"
+NUSCOM_paternal_autocrat_ADJ:0 "Insulindian"
+NUSCOM_paternal_autocrat_DEF:0 "The Islamic State of Insulindia"
+NUSCOM_national_populist:0 "Insulindian Federation"
+NUSCOM_national_populist_ADJ:0 "Insulindian"
+NUSCOM_national_populist_DEF:0 "The Insulindian Federation"
+
+INSULT_totalist:0 "Nusantara Communes"
+INSULT_totalist_ADJ:0 "Nustantaran"
+INSULT_totalist_DEF:0 "the Nusantara Communes"
+INSULT_syndicalist:0 "Nusantara Communes"
+INSULT_syndicalist_ADJ:0 "Insulindian"
+INSULT_syndicalist_DEF:0 "the Nusantara Communes"
+INSULT_radical_socialist:0 "Insulindia"
+INSULT_radical_socialist_ADJ:0 "Insulindian"
+INSULT_radical_socialist_DEF:0 "Insulindia"
+INSULT_social_democrat:0 "Insulindia"
+INSULT_social_democrat_ADJ:0 "Insulindian"
+INSULT_social_democrat_DEF:0 "Insulindia"
+INSULT_social_liberal:0 "Insulindia"
+INSULT_social_liberal_ADJ:0 "Insulindian"
+INSULT_social_liberal_DEF:0 "Insulindia"
+INSULT_market_liberal:0 "Insulindia"
+INSULT_market_liberal_ADJ:0 "Insulindian"
+INSULT_market_liberal_DEF:0 "Insulindia"
+INSULT_social_conservative:0 "Insulindia"
+INSULT_social_conservative_ADJ:0 "Insulindian"
+INSULT_social_conservative_DEF:0 "Insulindia"
+INSULT_authoritarian_democrat:0 "Insulindia"
+INSULT_authoritarian_democrat_ADJ:0 "Insulindian"
+INSULT_authoritarian_democrat_DEF:0 "Insulindia"
+INSULT_paternal_autocrat:0 "Insulindian Sultanate"
+INSULT_paternal_autocrat_ADJ:0 "Insulindian"
+INSULT_paternal_autocrat_DEF:0 "The Insulindian Sultanate"
+INSULT_national_populist:0 "Insulindian Federation"
+INSULT_national_populist_ADJ:0 "Insulindian"
+INSULT_national_populist_DEF:0 "The Insulindian Federation"
+
+FOP_WIN_ARG_totalist:0 "아르헨티나 코뮌"
+FOP_WIN_ARG_totalist_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_totalist_DEF:0 "아르헨티나 코뮌"
+FOP_WIN_ARG_syndicalist:0 "아르헨티나 코뮌"
+FOP_WIN_ARG_syndicalist_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_syndicalist_DEF:0 "아르헨티나 코뮌"
+FOP_WIN_ARG_radical_socialist:0 "아르헨티나 코뮌"
+FOP_WIN_ARG_radical_socialist_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_radical_socialist_DEF:0 "아르헨티나 코뮌"
+FOP_WIN_ARG_social_democrat:0 "아르헨티나"
+FOP_WIN_ARG_social_democrat_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_social_democrat_DEF:0 "아르헨티나"
+FOP_WIN_ARG_social_liberal:0 "아르헨티나"
+FOP_WIN_ARG_social_liberal_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_social_liberal_DEF:0 "아르헨티나"
+FOP_WIN_ARG_market_liberal:0 "아르헨티나"
+FOP_WIN_ARG_market_liberal_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_market_liberal_DEF:0 "아르헨티나"
+FOP_WIN_ARG_social_conservative:0 "아르헨티나"
+FOP_WIN_ARG_social_conservative_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_social_conservative_DEF:0 "아르헨티나"
+FOP_WIN_ARG_authoritarian_democrat:0 "아르헨티나"
+FOP_WIN_ARG_authoritarian_democrat_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_authoritarian_democrat_DEF:0 "아르헨티나"
+FOP_WIN_ARG_paternal_autocrat:0 "아르헨티나"
+FOP_WIN_ARG_paternal_autocrat_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_paternal_autocrat_DEF:0 "아르헨티나"
+FOP_WIN_ARG_national_populist:0 "아르헨티나"
+FOP_WIN_ARG_national_populist_ADJ:0 "아르헨티나"
+FOP_WIN_ARG_national_populist_DEF:0 "아르헨티나"
