7월 업데이트 / 다수명칭 변경됨

--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -2935,15 +2935,15 @@ GXC_market_liberal_DEF:0 "광시"
 GXC_social_conservative:0 "광시"
 GXC_social_conservative_ADJ:0 "광시"
 GXC_social_conservative_DEF:0 "광시"
-GXC_authoritarian_democrat:0 "광시 파벌"
+GXC_authoritarian_democrat:0 "광시 군벌"
 GXC_authoritarian_democrat_ADJ:0 "광시"
-GXC_authoritarian_democrat_DEF:0 "광시 파벌"
-GXC_paternal_autocrat:0 "광시 파벌"
+GXC_authoritarian_democrat_DEF:0 "광시 군벌"
+GXC_paternal_autocrat:0 "광시 군벌"
 GXC_paternal_autocrat_ADJ:0 "광시"
-GXC_paternal_autocrat_DEF:0 "광시 파벌"
-GXC_national_populist:0 "광시 파벌"
+GXC_paternal_autocrat_DEF:0 "광시 군벌"
+GXC_national_populist:0 "광시 군벌"
 GXC_national_populist_ADJ:0 "광시"
-GXC_national_populist_DEF:0 "광시 파벌"
+GXC_national_populist_DEF:0 "광시 "
 
 HAI_totalist:0 "아이티 사회주의 공화국"
 HAI_totalist_ADJ:0 "아이티"
@@ -4299,15 +4299,15 @@ MEN_market_liberal_DEF:0 "몽강"
 MEN_social_conservative:0 "몽강"
 MEN_social_conservative_ADJ:0 "몽강"
 MEN_social_conservative_DEF:0 "몽강"
-MEN_authoritarian_democrat:0 "몽강 파벌"
+MEN_authoritarian_democrat:0 "몽강 군벌"
 MEN_authoritarian_democrat_ADJ:0 "몽강"
-MEN_authoritarian_democrat_DEF:0 "몽강 파벌"
-MEN_paternal_autocrat:0 "몽강 파벌"
+MEN_authoritarian_democrat_DEF:0 "몽강 군벌"
+MEN_paternal_autocrat:0 "몽강 군벌"
 MEN_paternal_autocrat_ADJ:0 "몽강"
-MEN_paternal_autocrat_DEF:0 "몽강 파벌"
-MEN_national_populist:0 "몽강 파벌"
+MEN_paternal_autocrat_DEF:0 "몽강 군벌"
+MEN_national_populist:0 "몽강 군벌"
 MEN_national_populist_ADJ:0 "몽강"
-MEN_national_populist_DEF:0 "몽강 파벌"
+MEN_national_populist_DEF:0 "몽강 군벌"
 
 MEX_totalist:0 "멕시코 합중국"
 MEX_totalist_ADJ:0 "멕시코"
