--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -21,7 +21,7 @@ balticduchy.2.d:0 "행정적으로, 공국은 두개의 도시, 리가와 레벨
 balticduchy.2.a:0 "내가 무슨 일에 휘말린 거지?"
 
 balticduchy.3.t:0 "공국의 전반적인 상황"
-balticduchy.3.d:0 "우리 공국의 상황은 완벽한 안정적인 상태가 아닙니다. 리투아니아는 해상으로의 활로를 원하고 러시아는 과거의 발트 지역의 재수복을 원합니다. 그리고 핀란드 민족주의자들은 그들의 에스토니아 형제들의 독립을 보길 원합니다. 게다가 에스틀란트,리블란트,쿠를란트 전반에 걸쳐 부족한 권위는 우리 경제에 심각한 족쇄가 되고 있습니다. 두드러진 내부적인 문제를 언급하지 않고서는, 미래의 계획을 만들기 전에 무엇부터 해결 해야할 지 선택해야 할 것 입니다."
+balticduchy.3.d:0 "우리 공국의 완벽 안정적인 상태가 아닙니다. 리투아니아는 해상으로의 활로를 원하고 러시아는 과거의 발트 지역의 재수복을 원합니다. 그리고 핀란드 민족주의자들은 그들의 에스토니아 형제들의 독립을 보길 원합니다. 게다가 에스틀란트,리블란트,쿠를란트 전반에 걸쳐 부족한 권위는 우리 경제에 심각한 족쇄가 되고 있습니다. 두드러진 내부적인 문제를 언급하지 않고서는, 미래의 계획을 만들기 전에 무엇부터 해결 해야할 지 선택해야 할 것 입니다."
 balticduchy.3.a:0 "다음 게임에서는 스위스를 해야 겠군."
 
 balticduchy.4.t:0 "새로운 제국!"
