7월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
@@ -63,7 +63,7 @@ FNG_War_of_Words_desc:0 "Sometimes the most decisive battles are fought and won 
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "왜적들을 내쫓자!"
 FNG_informal_empire_1_desc:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation!"
-FNG_informal_empire_2:0 "Preservation of the Xinhai Order"
+FNG_informal_empire_2:0 "신해혁명 보존"
 FNG_informal_empire_2_desc:0 "Fengtian is the sole standing government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. This is the core of the government's legitimacy."
 FNG_informal_empire_3:0 "만철의 영향력"
 FNG_informal_empire_3_desc:0 "Mantetsu's economic influence spreads across the country and through the Assembly. While the government is committed to privately resisting, their efforts grow weaker by the day."
@@ -76,17 +76,17 @@ FNG_informal_empire_5_desc:0 "Japanese expertise and Mantetsu's influence propel
 FNG_expel_japanese_officers_tooltip:0 "§RCompleting this focus will have dire consequences for Fengtian's relationship with Japan.§!\n"
 FNG_proclamation_tooltip:0 "§ROnly complete this focus when prepared to begin the Reclamation War within a year.§!\n"
 FNG_mantetsu_collaboration_unlock:0 "Unlocks the §YMantetsu Industrial Subsiduaries§! company.\n"
-FNG_yamato_hotel_unlock:0 "Unlocks §YAircraft Manufacturing Companies§!. \n"
+FNG_yamato_hotel_unlock:0 "Unlocks §YAircraft Manufacturing Companies§!.\n"
 FNG_manufacture_minsheng_unlock:0 "Unlocks the §YMinsheng Automobile Company§!.\n"
 FNG_incentivize_zaibatsu_arms_manufacture_unlock:0 "Unlocks the §YMitsubishi Heavy Industries§! company.\n"
 FNG_standardize_equipment_unlock:0 "Unlocks the §YShenyang Arsenal§! company.\n"
 FNG_remove_investment_dearth:0 "Required to remove the §YInvestment Dearth§! national spirit.\n"
 FNG_hiroshima_proposal:0 "§GProvides periodic deliveries of increasingly advanced Japanese weapons.§!"
 FNG_WIP:0 "This focus is a Work in Progress, and will be completed along with the full China rework later this year.\n"
-FNG_Japan_Support:0 "Japan sends 200 support equipment to aid our cause \n"
-FNG_shanhaiguan_spawn:0 "§YMilitia§! divisions appear on the banks of the Chaobai River \n"
+FNG_Japan_Support:0 "Japan sends 200 support equipment to aid our cause\n"
+FNG_shanhaiguan_spawn:0 "§YMilitia§! divisions appear on the banks of the Chaobai River\n"
 FNG_one_time_cost:0 "(This is a one-time cost)\n"
-FNG_begin:0 "Begin the game\n"
+FNG_begin:0 "게임이 시작됩니다\n"
 FNG_recommended:0 "Briefings are recommended for first time players\n"
 FNG_imperial_han_suppression:0 "The §YImperial Han Society§! is supressed.\n"
 FNG_japan_denies_provinces:0 "§RCompleting this focus could have dire consequences for Fengtian's relationship with Japan.§!\n"
@@ -646,13 +646,13 @@ fengtian.43.b:0 "Beijing is our new capital"
 fengtian.43.c:0 "Nanjing is our new capital"
 
 ### New Fengtian Events ###
-fengtian.new.0.t:0 "Warning!"
-fengtian.new.0.d:0 "This is a public service announcement:\n\nPlease be aware that China, in its current state, is an atrocious broken mess. It is not recommended that you play any faction in China outside the Northeast (Fengtian), and if you choose to do so you proceed 'at your own risk'. We apologize for the mess, and order should be restored once the China Rework is finally complete."
-fengtian.new.0.a:0 "Understood"
+fengtian.new.0.t:0 "경고!"
+fengtian.new.0.d:0 "This is a public service announcement:\n\nPlease be aware that China, in its current state, is an atrocious broken mess. It is not recommended that you play any faction in China outside the Northeast (Fengtian), and if you choose to do so you proceed 'at your own risk'. We apologise for the mess, and order should be restored once the China Rework is finally complete."
+fengtian.new.0.a:0 "이해했다"
 fengtian.new.1.t:0 "Huanghanhui Crackdown"
-fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects. \n\nShortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Shenyang, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to pursue this matter any further."
-fengtian.new.1.a:0 "Troubling"
-fengtian.new.2.t:0 "교통계가 철도파업을 주도하다."
+fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects.\n\nShortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Shenyang, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to pursue this matter any further."
+fengtian.new.1.a:0 "문제군"
+fengtian.new.2.t:0 "Communications Clique Leads Railroad Strikes"
 fengtian.new.2.d:0 "The Communications Clique, with its widespread influence in Chinese-owned Manchurian railroads like the CER, has resorted to encouraging union activity and strikes to compensate for its recent losses of influence in government. The Clique will likely only go so far, for risk of creating something it cannot control, but their methods have already been fairly successful in demonstrating their political and economic clout."
 fengtian.new.2.a:0 "Unfortunate but necessary"
 #Land Reform Events
