--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -442,6 +442,8 @@ GEA_Fernspaher_decision_desc:0 "The growingly intense war in Indochina has expos
 GEA_reintegrate_Cochinchina_decision:0 "코친차이나 재합병"
 GEA_German_vietnamese_reconciliation_decision:0 "German-Vietnamese Reconciliation"
 GEA_German_vietnamese_reconciliation_decision_desc:0 "The flashback of the counter-insurgency actions in Indochina is haunting Admiral Hellmuth von Mücke and now he felt that he has do something to reconcile the brutal killings. He wants to pursue a popular colonial policy by granting greater local autonomy and promoting German-Vietnamese harmony. By doing so, he hopes to regain the hearts and minds of people in Cochinchina."
+blow_singapore_causeway:0 "Destruction of Dschohor-Singapur Causeway"
+blow_singapore_causeway_desc:0 "Being the only land route between the mainland and Singapur, while destroying this can give us the precious time needed to fortify the island, doing so will have negative consequence on our war effort - as this mean that we've decided to abandon the mainland to the enemy hands..."
 #Fleet Exercise
 #With the arrival of new capital ships, our fleet has experimented and exercised new group tactics. Maybe it's time to have a joint exercise with the High Sea Fleet?
 #Fleet Exercise
